  [:alpha:]

  For example code below would be recognised as a
  `py-expression' composed by three
  py-partial-expressions.

  OrderedDict.popitem(last=True)

  Putting the curser at the EOL, M-3 M-x py-add-abbrev

  would prompt "op" for an abbrev to store, as first
  `py-partial-expression' beginns with a "(", which is
  not taken as proposal.

- modeline enhanced
  when a path/to/my/favoured/Python is given with `py-shell-name'
  the Python-shell buffer before would display

  *ND path/to/my/favoured/Python* 

  now:

  *ptmfP Python*

  boolean `py-modeline-display-full-path-p' 
  boolean `py-modeline-acronym-display-home-p'  
  If the modeline acronym should contain chars indicating the home-directory.




New in version 6.0.8

--------------------

- `py-pep8-run', new command checking formatting
   `py-pep8-help'

- `py-pyflake-run', new command 
   Pyflakes is a simple program which checks Python
   source files for errors. - It is similar to
   PyChecker in scope, but differs in - that it does
   not execute the modules to check them.
   `py-pyflake-help'

- `py-pylint-run', new command calls Pylint, 
  a Python source code analyzer which looks for
  programming errors, helps enforcing a coding standard
  and sniffs for some code smells (as defined in Martin
  Fowler's Refactoring book) . 

  Pylint checks length of lines of code, if variable
  names are well-formed according to your coding
  standard, if declared interfaces are truly
  implemented, and much more. Additionally, it is
  possible to write plugins.
  `py-pylint-doku', `py-pylint-help'

- py-pyflakespep8-run, combines calls to pyflakes and pep8
  
- respective flymake-modes,
  `pyflakespep8-flymake-mode', `pylint-flymake-mode'
  etc. See meny PyTools

New in version 6.0.7
--------------------

- make every Python shell acces its own history-file
  .python3_history
  .python_history
  .ipython_history etc.

- related to shell used
  `toggle-force-py-shell-name-p'